add pred template

--- a/libavcodec/riscv/Makefile
+++ b/libavcodec/riscv/Makefile
@@ -1,2 +1,5 @@
 OBJS-${CONFIG_HEVC_DECODER} += riscv/hevcdsp_init_riscv.o
 RVV-OBJS-${CONFIG_HEVC_DECODER} += riscv/hevcdsp_rvv.o
+
+OBJS-${CONFIG_HEVC_DECODER} += riscv/hevcpred_init_riscv.o
+RVV-OBJS-${CONFIG_HEVC_DECODER} += riscv/hevcpred_rvv.o
